Dark mode menu builder

--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -1,6 +1,6 @@
 @import "../../../../../modules/backend/assets/less/core/boot.less";
 
-@builder-control-border-color: #bdc3c7;
+@builder-control-border-color: var(--oc-document-ruler-tick, #bdc3c7);
 @builder-control-tooltip-color: #72809d;
 @builder-control-text-color: #95a5a6;
 @builder-hover-color: var(--oc-selection);
