--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -1,5 +1,5 @@
 .builder-building-area {
-    background: white;
+    background: var(--bs-body-bg, white);
 
     ul.builder-control-list {
         .clearfix();
