--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -1,5 +1,5 @@
 .builder-tailor-builder-area {
-    background: white;
+    background: var(--bs-body-bg, white);
 
     ul.tailor-blueprint-list {
         .clearfix();
@@ -31,7 +31,7 @@
             &.add {
                 font-size: 16px;
                 text-align: center;
-                border: 2px dotted #dde0e2;
+                border: 2px dotted var(--oc-dropdown-trigger-border, #dde0e2);
                 height: 64px;
 
                 a {
@@ -39,7 +39,7 @@
                     height: 60px;
                     display: block;
                     text-decoration: none;
-                    color: #bdc3c7;
+                    color: var(--oc-dropdown-trigger-color, #bdc3c7);
                 }
 
                 i {
