--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -53,8 +53,8 @@
                         }
                     }
 
-                    .placeholder {
-                        background: #EEF2F4;
+                    .oc-placeholder {
+                        background: var(--oc-secondary-bg, #EEF2F4);
                         height: 25px;
                     }
 
@@ -66,7 +66,7 @@
 
             .reorder-behavior {
                 table {
-                    i.icon-bars, .placeholder {
+                    i.icon-bars, .oc-placeholder {
                         float: left;
                     }
 
@@ -103,7 +103,7 @@
                     }
 
                     div.label {
-                        background: #EEF2F4;
+                        background: var(--oc-secondary-bg, #EEF2F4);
                         height: 25px;
                         margin-bottom: 10px;
 
@@ -121,14 +121,14 @@
                     }
 
                     div.control {
-                        background: #EEF2F4;
+                        background: var(--oc-secondary-bg, #EEF2F4);
                         height: 35px;
                         margin-bottom: 25px;
                     }
                 }
 
                 div.button {
-                    background: #EEF2F4;
+                    background: var(--oc-secondary-bg, #EEF2F4);
                     height: 35px;
                     margin-right: 20px;
                     .border-radius(4px);
