--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -92,7 +92,7 @@
                     }
 
                     div.label {
-                        background: #EEF2F4;
+                        background: var(--oc-secondary-bg, #EEF2F4);
                         height: 25px;
                         margin-bottom: 10px;
 
@@ -110,14 +110,14 @@
                     }
 
                     div.control {
-                        background: #EEF2F4;
+                        background: var(--oc-secondary-bg, #EEF2F4);
                         height: 35px;
                         margin-bottom: 25px;
                     }
                 }
 
                 div.button {
-                    background: #EEF2F4;
+                    background: var(--oc-secondary-bg, #EEF2F4);
                     height: 35px;
                     margin-right: 20px;
                     .border-radius(4px);
