--- a/widgets/defaultbehaviordesigntimeprovider/partials/_behavior-reorder-controller.htm
+++ b/widgets/defaultbehaviordesigntimeprovider/partials/_behavior-reorder-controller.htm
@@ -3,15 +3,15 @@
         <table>
             <tbody>
                 <tr>
-                    <td><i class="icon-bars"></i> <div class="placeholder" style="width: 80%"></div></td>
+                    <td><i class="icon-bars"></i> <div class="oc-placeholder" style="width: 80%"></div></td>
                 </tr>
 
                 <tr>
-                    <td><i class="icon-bars"></i><div class="placeholder" style="width: 20%"></div></td>
+                    <td><i class="icon-bars"></i><div class="oc-placeholder" style="width: 20%"></div></td>
                 </tr>
 
                 <tr>
-                    <td><i class="icon-bars"></i><div class="placeholder" style="width: 40%"></div></td>
+                    <td><i class="icon-bars"></i><div class="oc-placeholder" style="width: 40%"></div></td>
                 </tr>
             </tbody>
         </table>
