Progress on selecting blueprints

--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -3,7 +3,6 @@
 
     ul.tailor-blueprint-list {
         .clearfix();
-
         padding: 20px;
         margin-bottom: 0;
         list-style: none;
@@ -27,47 +26,9 @@
                     top: 14px;
                 }
             }
-
-            &.add {
-                font-size: 16px;
-                text-align: center;
-                border: 2px dotted var(--oc-dropdown-trigger-border, #dde0e2);
-                height: 64px;
-
-                a {
-                    padding: 20px 15px;
-                    height: 60px;
-                    display: block;
-                    text-decoration: none;
-                    color: var(--oc-dropdown-trigger-color, #bdc3c7);
-                }
-
-                i {
-                    margin-right: 5px;
-                }
-
-                span {
-                    position: relative;
-                    top: -1px;
-                }
-
-                span.title {
-                    font-size: 14px;
-                }
-
-                &:hover {
-                    border: 2px dotted @builder-hover-color;
-                    background: @builder-hover-color!important;
-
-                    a {
-                        color: white;
-                    }
-                }
-            }
         }
 
         .blueprint-container {
-            margin-bottom: 40px;
             .clearfix();
 
             .tailor-blueprint {
@@ -143,78 +104,52 @@
             }
         }
     }
-}
 
-// Fix for the Mac firefox
+    .add-blueprint-button {
+        font-size: 16px;
+        text-align: center;
+        border: 2px dotted var(--oc-dropdown-trigger-border, #dde0e2);
+        height: 64px;
+        margin: 20px;
+        margin-bottom: 40px;
 
-html.gecko.mac {
-    .builder-tailor-builder-area {
-        ul.tailor-blueprint-list {
-            padding-right: 40px;
+        a {
+            padding: 20px 15px;
+            height: 60px;
+            display: block;
+            text-decoration: none;
+            color: var(--oc-dropdown-trigger-color, #bdc3c7);
+        }
+
+        i {
+            margin-right: 5px;
+        }
+
+        span {
+            position: relative;
+            top: -1px;
+        }
+
+        span.title {
+            font-size: 14px;
+        }
+
+        &:hover {
+            border: 2px dotted @builder-hover-color;
+            background: @builder-hover-color!important;
+
+            a {
+                color: white;
+            }
         }
     }
 }
 
-
-
-
-.xxx_builder-blueprint-importer {
-    background: white;
-
-    .builder-blueprint-importer-workspace {
-        padding: 30px;
-    }
-
-    ul.builder-imports {
-        padding: 0;
-
-        > li {
-            display: inline-block;
-            vertical-align: top;
-            border-radius: 4px;
-
-            div.item-container:hover, &.inspector-open > div.item-container {
-                background: @builder-hover-color!important;
-                color: white!important;
-
-                a {
-                    color: white!important;
-                }
-            }
-
-            div.item-container {
-                position: relative;
-
-                .close-btn {
-                    color: white;
-                    position: absolute;
-                    display: none;
-                    width: 15px;
-                    height: 15px;
-                    right: 5px;
-                    top: 5px;
-                    font-size: 14px;
-                    text-align: center;
-                    line-height: 14px;
-                }
-
-                &:hover .close-btn {
-                    display: block;
-                    text-decoration: none;
-                    .opacity(0.5);
-
-                    &:hover {
-                        .opacity(1);
-                    }
-                }
-            }
-
-            &.blueprint {
-                width: 100%;
-                margin-bottom: 15px;
-            }
-
-
+// Fix for the Mac firefox
+html.gecko.mac {
+    .builder-tailor-builder-area {
+        ul.tailor-blueprint-list {
+            padding-right: 40px;
         }
     }
 }
