Progress on blueprint generator

--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -44,7 +44,7 @@
 
             &.updating-control:after,
             &.loading-control:before {
-                background-image:url(../../../../../modules/system/assets/ui/images/loader-transparent.svg);
+                background-image:url(../images/loader-transparent.svg);
                 background-size: 15px 15px;
                 background-position: 50% 50%;
                 display: inline-block;
