--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -43,8 +43,8 @@
                 font-weight: bold;
                 line-height: 21px;
                 border-radius: 20px;
-                background: #ecf0f1;
-                color: #95a5a6 !important;
+                background: var(--oc-toolbar-border, #ecf0f1);
+                color: var(--oc-toolbar-color, #95a5a6) !important;
 
                 &:hover {
                     color: white !important;
