--- a/assets/less/tabs.less
+++ b/assets/less/tabs.less
@@ -285,7 +285,7 @@
 
                         > div.tab-container {
                             > div {
-                                color: #555555;
+                                color: var(--oc-builder-control-color);
                                 padding-right: 30px;
                             }
                         }
