Reload entire plugin after import

--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -85,8 +85,7 @@
         text-align: center;
         border: 2px dotted var(--oc-dropdown-trigger-border, #dde0e2);
         height: 64px;
-        margin: 20px;
-        margin-bottom: 40px;
+        margin: 0 20px 40px;
 
         a {
             padding: 20px 15px;
