Adds a basic code editor for the selected plugin

--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -20,6 +20,7 @@
 @import "menus.less";
 @import "imports.less";
 @import "localization.less";
+@import "codelist.less";
 
 .control-filelist ul li.group.model > h4 a:after {
     content: @random;
