--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -34,8 +34,8 @@
             .clearfix();
             cursor: pointer;
 
-            .list-behavior, .reorder-behavior {
-                .border-radius(4px);
+            .list-behavior, .import-export-behavior {
+                border-radius: 4px;
                 border: 2px solid @builder-control-border-color;
                 padding: 25px 10px 25px 10px;
 
@@ -64,7 +64,7 @@
                 }
             }
 
-            .reorder-behavior {
+            .import-export-behavior {
                 table {
                     i.icon-bars, .oc-placeholder {
                         float: left;
