--- a/assets/less/imports.less
+++ b/assets/less/imports.less
@@ -44,6 +44,7 @@
                 }
                 th {
                     font-size: 0.875em;
+                    text-align: right;
                 }
                 th:not(.table-danger) {
                     color: @text-color;
